force-app/main/default/objects/Funnel_Addition_Target__c/Funnel_Addition_Target__c.object-meta.xml
<CustomObject>
    <label>Funnel Addition Target</label>
    <nameField>
        <displayFormat>FAT-{0000000}</displayFormat>
        <label>Funnel Addition Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funnel Addition Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>