force-app/main/default/objects/Funnel_Addition_Target__c/fields/Amount_at_Start__c.field-meta.xml
<CustomField>
    <fullName>Amount_at_Start__c</fullName>
    <label>Amount at Start of Period</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>