force-app/main/default/objects/Funnel_Addition_Target__c/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <label>Current Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>