force-app/main/default/objects/Funnel_Addition_Target__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fiscal_Year</valueSetName>
    </valueSet>
</CustomField>