force-app/main/default/objects/Funnel_Addition_Target__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Period</valueSetName>
    </valueSet>
</CustomField>