force-app/main/default/objects/Funnel_Addition_Target__c/fields/Quote_Config__c.field-meta.xml
<CustomField>
    <fullName>Quote_Config__c</fullName>
    <label>Annual Quota Config</label>
    <referenceTo>Annual_Quota_Config__c</referenceTo>
    <relationshipLabel>Funnel Addition Targets</relationshipLabel>
    <relationshipName>Funnel_Addition_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>