force-app/main/default/objects/Funnel_Addition_Target__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funnel_Addition_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>