force-app/main/default/objects/Funnel_Addition_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Period__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>